--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/syp-lang/Embers#readme>
 
 dependencies:
+- containers
 - base >= 4.7 && < 5
 - hspec # X11 (MIT)
 - QuickCheck # BSD-3-Clause
