Program Table Management & Symbol Resolution.
A lot of ugly code. Try foldl for tale recursive functions.

--- a/package.yaml
+++ b/package.yaml
@@ -26,7 +26,7 @@ dependencies:
 - QuickCheck # BSD-3-Clause
 - optparse-applicative # BSD-3-Clause
 - semigroups # BSD-3-Clause
-
+- pretty-simple # BSD-3-Clause
 library:
   source-dirs: src
 
