Abstractions for simplification phases.
Also code organization, error types and switch to HLS from HIE.

--- a/hie.yaml
+++ b/hie.yaml
@@ -1,2 +1,16 @@
 cradle:
   stack:
+    - path: "./src"
+      component: "Embers:lib"
+
+    - path: "./app/Main.hs"
+      component: "Embers:exe:Embers"
+
+    - path: "./app/Args.hs"
+      component: "Embers:exe:Embers"
+
+    - path: "./app/Paths_Embers.hs"
+      component: "Embers:exe:Embers"
+
+    - path: "./test"
+      component: "Embers:test:Embers-test"
