NameResolver: Replace AbsParser.
Switch to LTS-16.16.
NameResolver: Replace Map ID Bool with Set ID.

--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,8 @@ tests:
 copyright: 2020 Syed Moiz Ur Rehman
 maintainer: syedmoizurrehman@hotmail.com
 dependencies:
+- ansi-terminal
+- filepath
 - flow
 - directory
 - speculate
