--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-14.22
+resolver: lts-16.16
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,10 +39,13 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+  - regex-posix-clib-2.7
 
 # Override default flag values for local packages and extra-deps
-# flags: {}
+flags:
+  regex-posix:
+    _regex-posix-clib: true
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
